[package]
name = "advent-of-code-2023"
description = "Solver for Advent of Code 2023"
authors = ["Eric Trexel <etrexel1@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
